<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/signin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollViewSignIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/cr28bffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Section -->
            <LinearLayout
                android:id="@+id/headerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleText"
                    style="@style/TitleTextStyle"
                    android:text="@string/sign_in_title" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionText"
                style="@style/DescriptionTextStyle"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_in_description" />


            <!-- Email or Username Input -->
            <LinearLayout
                android:id="@+id/emailOrUsernameLayout"
                style="@style/InputFieldContainerStyle">

                <TextView
                    android:id="@+id/emailOrUsernameLabel"
                    style="@style/InputLabelStyle"
                    android:text="@string/email_or_username_label" />

                <EditText
                    android:id="@+id/emailOrUsernameInput"
                    style="@style/InputFieldStyle"
                    android:hint="@string/email_or_username_hint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <!-- Password Input -->
            <LinearLayout
                android:id="@+id/passwordLayout"
                style="@style/InputFieldContainerStyle">

                <TextView
                    android:id="@+id/passwordLabel"
                    style="@style/InputLabelStyle"
                    android:text="@string/password_label" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cr12be8e7e7"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/passwordInput"
                        style="@style/InputFieldStyle"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/passwordVisibilityToggle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginHorizontal="15dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/eye_slash"
                        app:shapeAppearanceOverlay="@style/cr15" />

                </LinearLayout>

            </LinearLayout>

            <!-- Forgot Password and Remember Me -->
            <LinearLayout
                android:id="@+id/forgotPasswordAndRememberMeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="21dp"
                android:layout_marginBottom="20dp"
                android:baselineAligned="false"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/forgotPasswordText"
                        style="@style/ForgotPasswordTextStyle"
                        android:text="@string/forgot_password_text" />
                </LinearLayout>

            </LinearLayout>

            <!-- Sign In Button -->
            <Button
                android:id="@+id/signInButton"
                style="@style/PrimaryButtonStyle"
                android:text="@string/sign_in_button_text" />

            <!-- Connect With Separator -->
            <LinearLayout
                android:id="@+id/connectWithSeparatorLayout"
                style="@style/SeparatorContainerStyle">

                <View
                    android:id="@+id/leftSeparator"
                    style="@style/SeparatorLineStyle" />


                <View
                    android:id="@+id/rightSeparator"
                    style="@style/SeparatorLineStyle" />
            </LinearLayout>

            <!-- Don’t Have an Account -->
            <LinearLayout
                android:id="@+id/dontHaveAccountLayout"
                style="@style/DontHaveAccountContainerStyle">

                <TextView
                    android:id="@+id/dontHaveAccountText"
                    style="@style/DontHaveAccountTextStyle"
                    android:text="@string/dont_have_account_text" />

                <TextView
                    android:id="@+id/createAccountText"
                    style="@style/CreateAccountTextStyle"
                    android:text="@string/create_account_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>